--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ltd",
+  "name": "ldt",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -17,6 +18,9 @@
     "react-native": "0.66.4",
     "react-native-date-picker": "^4.1.3",
     "react-native-elements": "^3.4.2",
+    "react-native-off-canvas-menu": "^0.1.32",
+    "react-native-pell-rich-editor": "^1.8.8",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-textinput-effects": "^0.6.2",
